# bluprints

./: pyproject.toml
src/bluprints/: __init__.py  __main__.py  __main__.pyi
src/bluprints.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bluprints/_data/: bluprints_dict.json  bluprints_sample.json
