[project]
name = "bluprints"
version = "0.0.3"
description = "Generate presentations"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["presentation", "description", "generate"]

authors = [
  {name = "brokedarius", email = "-@-.org" }
]

maintainers = [
  {name = "brokedarius", email = "-@-.org" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Developers",
  
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "msgspec",
  "regex",
  "rich",
  "platformdirs"
]

[project.scripts]
bluprints = "bluprints.__main__:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"bluprints" = ["__main__.pyi", "py.typed"]
"bluprints._data" = ["bluprints_dict.json", "bluprints_sample.json"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"